Revision history for Perl module Net::Mosso::CloudFiles:

0.35
    - Reauthenticate when the authentication token expires
      (after one hour)
    - Return more than 10,000 objects by issuing multiple calls
      (objects now returns a Data::Stream::Bulk object)

0.34 Tue Jan 13 15:37:27 GMT 2009
    - Retry upon errors using LWP::UserAgent::Determined
    - Make all the classes immutable

0.33 Tue Jan 13 09:04:11 GMT 2009
    - Add getting and putting to files
    - Prohibit UTF8 key names
    - Change the default content type from text/plain to 
      application/octet-stream

0.32 Wed Oct 22 23:01:11 BST 2008
	- First release