@@ -5,6 +5,7 @@ Revision history for Perl module Net::Mosso::CloudFiles:
       (after one hour)
     - Return more than 10,000 objects by issuing multiple calls
       (objects now returns a Data::Stream::Bulk object)
+    - Only do 990 keep alive requests per connection
 
 0.34 Tue Jan 13 15:37:27 GMT 2009
     - Retry upon errors using LWP::UserAgent::Determined
